--- a/experience.html
+++ b/experience.html
@@ -29,7 +29,7 @@
     <div class="card">
       <h2>Experience</h2>
       <p>I've been a math tutor for over ten years. I've tutored at Mathnasium, Sylvan Learning Center, Benson
-        Highschool and privately. My problem solving skills in math contribute to me being a great developer.</p>
+        High School and privately. My problem solving skills in math contribute to me being a great developer.</p>
     </div>
 
   </main>
