Updated for revisions

--- a/Interests.html
+++ b/Interests.html
@@ -20,7 +20,7 @@
     </ul>
   </nav>
 
-  <header class="header-experience">
+  <header class="header-interests">
     <img src="images/me.jpg" alt="Image of Emma Hellman" class="profile-image">
     <h1 class="tag name">Hello, I’m Emma Hellman.</h1>
     <p class="tag location">My home is Tillamook, Oregon.</p>
@@ -28,10 +28,9 @@
 
   <main class="flex">
     <section>
-      <h2>Experience</h2>
-      <p>I've been a math tutor for over ten years. I've tutored at Mathnasium, Sylvan Learning Center, Benson
-        High School and privately. My problem solving skills in math contribute to me being a great developer.</p>
-      </section>
+      <h2>Interests</h2>
+      <p>I really enjoy playing the piano. I also like going on hikes with my husband. In my free time I like to read books in Spanish. I own nine cats and two dogs, and I like taking care of them all. </p>
+    </section>
 
   </main>
   <footer>
