--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <div class="main-nav">
+    <nav>
         <ul class="nav">
           <li class="name">Emma Hellman</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="experience.html">Experience</a></li>
+          <li><a href="interests.html">Interests</a></li>
         </ul>
-    </div>
+      </nav>
 
     <header>
       <img src="images/me.jpg" alt="Image of Emma Hellman" class="profile-image">
@@ -23,26 +24,29 @@
     </header>
 
     <main class="flex">
-      <div class="card">
+      <section>
         <h2>Background</h2>
         <p>I'm an aspiring web developer. I have HTML, CSS and JavaScript skills. I like to build functional and beautiful websites.</p>
-      </div>
+      </section>
 
-      <div class="card">
+      <section>
         <h2>Goals</h2>
-        <p>I want to increase my knowledge, skills and abilities in:</p>
+        <p>I want to complete the Tech Degree front-end web developement and full-stack web development courses. </p>
+        <p> After completing the courses, I want to become a junior web developer. </p>
+        <p>I want to enhance my skills of these three technologies so that I'm fully equipped to handle the challening work enviornment I'm entering:</p>
         <ul class="skills">
           <li>HTML</li>
           <li>CSS</li>
           <li>JavaScript</li>
         </ul>
-        <p>I'd like to work as a web developer at a firm.</p>
-      </div>
+        <p>I'd like to work as a web developer at a small firm, and then eventually get a job at a large business like Google or Facebook.</p>
+      </section>
 
     </main>
     <footer>
       <ul>
         <li><a href="https://www.linkedin.com/in/emmahellman/" class="social linkedin">LinkedIn</a></li>
+        <li><a href="https://github.com/EmmaHHellman" class="social github">Github</a></li>
       </ul>
       <p class="copyright">Copyright 2020, Emma Hellman</p>
     </footer>
